--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <meta charset="utf-8">
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.69/Build/Cesium/Cesium.js"></script>
+
+  <link rel="stylesheet" href="./lib/dropzone.css">
+  <link rel="stylesheet" href="./lib/basic.css">
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.69/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <script src="./bin/app.js"></script>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <div>
+    <div style="width: calc(50% - 20px); height: 100%; display: inline-block;">
+      <div>
+        <form class="dropzone" id="dropzone-area">
+        </form>
+      </div>
+    </div>
+    <div style="width: calc(50%  - 20px); height: 100%; display: inline-block;">
+      <div style="height: 100%; width: 100%; display: table;">
+        <div class="preview-container" style="display: table-cell; vertical-align: middle;">
+          <div id="cesiumContainer" style="width: 100%; height:400px"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
